# simple-gedcom

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
simple_gedcom/: __init__.py  census.py  elements.py  gedcom_file.py  marriages.py  parser.py  pedigree.py  people.py  pyproject.toml  sources.py
tests/: test.py  test_parser.py  test_simple_gedcom.py
tests/data/: Family Tree.csv  tree.ged
